--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1098,6 +1098,202 @@
     "plt.ylabel(\"Accuracy\")\n",
     "plt.legend([\"Train\", \"Validation\"], loc=\"upper left\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ph</th>\n",
+       "      <th>Hardness</th>\n",
+       "      <th>Solids</th>\n",
+       "      <th>Chloramines</th>\n",
+       "      <th>Sulfate</th>\n",
+       "      <th>Conductivity</th>\n",
+       "      <th>Organic_carbon</th>\n",
+       "      <th>Trihalomethanes</th>\n",
+       "      <th>Turbidity</th>\n",
+       "      <th>Potability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.080795</td>\n",
+       "      <td>204.890455</td>\n",
+       "      <td>20791.318981</td>\n",
+       "      <td>7.300212</td>\n",
+       "      <td>368.516441</td>\n",
+       "      <td>564.308654</td>\n",
+       "      <td>10.379783</td>\n",
+       "      <td>86.990970</td>\n",
+       "      <td>2.963135</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.716080</td>\n",
+       "      <td>129.422921</td>\n",
+       "      <td>18630.057858</td>\n",
+       "      <td>6.635246</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>592.885359</td>\n",
+       "      <td>15.180013</td>\n",
+       "      <td>56.329076</td>\n",
+       "      <td>4.500656</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.099124</td>\n",
+       "      <td>224.236259</td>\n",
+       "      <td>19909.541732</td>\n",
+       "      <td>9.275884</td>\n",
+       "      <td>333.775777</td>\n",
+       "      <td>418.606213</td>\n",
+       "      <td>16.868637</td>\n",
+       "      <td>66.420093</td>\n",
+       "      <td>3.055934</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.316766</td>\n",
+       "      <td>214.373394</td>\n",
+       "      <td>22018.417441</td>\n",
+       "      <td>8.059332</td>\n",
+       "      <td>356.886136</td>\n",
+       "      <td>363.266516</td>\n",
+       "      <td>18.436524</td>\n",
+       "      <td>100.341674</td>\n",
+       "      <td>4.628771</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.092223</td>\n",
+       "      <td>181.101509</td>\n",
+       "      <td>17978.986339</td>\n",
+       "      <td>6.546600</td>\n",
+       "      <td>310.135738</td>\n",
+       "      <td>398.410813</td>\n",
+       "      <td>11.558279</td>\n",
+       "      <td>31.997993</td>\n",
+       "      <td>4.075075</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ph    Hardness        Solids  Chloramines     Sulfate  Conductivity  \\\n",
+       "0  7.080795  204.890455  20791.318981     7.300212  368.516441    564.308654   \n",
+       "1  3.716080  129.422921  18630.057858     6.635246  333.775777    592.885359   \n",
+       "2  8.099124  224.236259  19909.541732     9.275884  333.775777    418.606213   \n",
+       "3  8.316766  214.373394  22018.417441     8.059332  356.886136    363.266516   \n",
+       "4  9.092223  181.101509  17978.986339     6.546600  310.135738    398.410813   \n",
+       "\n",
+       "   Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
+       "0       10.379783        86.990970   2.963135           0  \n",
+       "1       15.180013        56.329076   4.500656           0  \n",
+       "2       16.868637        66.420093   3.055934           0  \n",
+       "3       18.436524       100.341674   4.628771           0  \n",
+       "4       11.558279        31.997993   4.075075           0  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# predict some values\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/it/anaconda3/envs/my_tens/lib/python3.10/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/home/it/anaconda3/envs/my_tens/lib/python3.10/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.]]\n",
+      "0\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 22ms/step\n",
+      "[[0.]]\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a function to transform the given data \n",
+    "def predict_water_potability(data):\n",
+    "    return model.predict(scaler.transform([data])).round()\n",
+    "\n",
+    "# predict the water potability of the first row\n",
+    "print(predict_water_potability(data.iloc[0, :-1]))\n",
+    "# get the real values of the first row\n",
+    "print(data.iloc[0, -1])\n",
+    "\n",
+    "# predict the water potability of the second row\n",
+    "print(predict_water_potability(data.iloc[1, :-1]))\n",
+    "# get the real values of the second row\n",
+    "print(data.iloc[1, -1])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the mode as a pickle file\n",
+    "import pickle\n",
+    "pickle.dump(model, open(\"water_potability_model.pkl\", \"wb\"))\n"
    ]
   }
  ],
